--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
     </header>
     <section>
         <h3 id="resume">Check out my full resume 
-            <a href="SeanWilsonResumeW19.pdf"><strong>=>here<=</strong></a>
+            <a href="SeanWilsonResumeS19.pdf"><strong>=>here<=</strong></a>
             (.pdf)
         </h3>
         <p><br></p>
@@ -51,7 +51,7 @@
     </section>
     <section>
         <h3 id="resume">Check out my full resume 
-            <a href="SeanWilsonResumeW19.pdf"><strong>=>here<=</strog></a>
+            <a href="SeanWilsonResumeS19.pdf"><strong>=>here<=</strog></a>
             (.pdf)
         </h3>
     </section>
